--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,6 +15,7 @@ build_script:
   - cmd: dotnet build
 
 test_script:
+  - cmd: set ReportPortal_TraceLevel=Verbose
   - cmd: dotnet test --no-build /p:CollectCoverage=true /p:CoverletOutputFormat=OpenCover /p:CoverletOutput=./Coverage.xml
 
 after_test:
@@ -25,3 +26,4 @@ after_test:
 artifacts:
   - path: '**\*.nupkg'
   - path: '**\*.html'
+  - path: '**\ReportPortal*.log'
