--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,9 +9,6 @@ configuration:
 build_script:
   - cmd: dotnet pack
 
-after_build:
-  - appveyor PushArtifact src\ReportPortal.Shared\bin\%configuration%\ReportPortal.Shared.*.nupkg
-
 test_script:
   - cmd: dotnet test /p:CollectCoverage=true /p:CoverletOutputFormat=OpenCover /p:CoverletOutput=./Coverage.xml
 
@@ -20,4 +17,5 @@ after_test:
   - dotnet run -c Release --project test/ReportPortal.Shared.Benchmark
 
 artifacts:
+  - path: '**\*.nupkg'
   - path: '**\*.html'
