--- a/src/ReportPortal.Shared/ReportPortal.Shared.csproj
+++ b/src/ReportPortal.Shared/ReportPortal.Shared.csproj
@@ -36,4 +36,10 @@
     <None Include="..\..\Logo.png" Pack="true" PackagePath="\" Visible="false" />
   </ItemGroup>
 
+  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+    <PackageReference Include="Microsoft.AspNetCore.StaticFiles">
+      <Version>2.2.0</Version>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
