--- a/src/ReportPortal.Shared/ReportPortal.Shared.csproj
+++ b/src/ReportPortal.Shared/ReportPortal.Shared.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net46;net45;</TargetFrameworks>
+    <TargetFrameworks>net6.0;netstandard2.0;net462;</TargetFrameworks>
     <PackageId>ReportPortal.Shared</PackageId>
 
     <Description>Multithreaded reporter of test results to http://reportportal.io</Description>
