--- a/src/ReportPortal.Shared/ReportPortal.Shared.csproj
+++ b/src/ReportPortal.Shared/ReportPortal.Shared.csproj
@@ -4,10 +4,10 @@
     <TargetFrameworks>netstandard2.0;net46;net45;</TargetFrameworks>
     <PackageId>ReportPortal.Shared</PackageId>
 
-    <Description>Multithreaded reporter of test results to http://reportportal.io</Description>
+    <Description>Multithreaded reporter of test results to https://reportportal.io</Description>
     <Authors>Nikolay Borisenko, Report Portal Community</Authors>
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
-    <PackageProjectUrl>http://reportportal.io</PackageProjectUrl>
+    <PackageProjectUrl>https://reportportal.io</PackageProjectUrl>
     <PackageIcon>Logo.png</PackageIcon>
     <RepositoryType>GitHub</RepositoryType>
     <RepositoryUrl>https://github.com/reportportal/commons-net</RepositoryUrl>
